# regime-detection

./: PHASE2_README.md  PHASE3_README.md  PHASE4_README.md  PHASE5_INTEGRATION_GUIDE.md  README.md  REGIME_MODULE_SYNOPSIS.md  REGIME_MODULE_SYNOPSIS_V2.md  pyproject.toml  regime_analysis_v3.2.md
config/: default_config.yaml
src/regime_detection/: __init__.py  config.py  manager.py  processors.py  recommendation.py  schema.py  signals.py
tests/: test_config.py  test_drift.py  test_manager.py  test_processors.py  test_recommendation.py  test_schema.py  test_signals.py
